# flux-ai

./: .gitignore  Cargo.toml  Dockerfile  README.md  TRAIN.md  docker-compose.yml  main.py
.github/workflows/: Dockerfile  cd.yaml  cd.yml
lib/api/: Cargo.toml  build.rs
lib/api/src/: lib.rs  notify.proto
settings/: default.toml
src/: app.rs  candle.rs  main.rs
src/app/: clients.rs  error.rs  ollama.rs  settings.rs  state.rs  streams.rs
src/app/streams/: execution.rs  http.rs  messaging.rs  service.rs  settings.rs  state.rs
