[package]
name = "flux-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
flux-core-api = { path = "../flux-core/lib/api" }
flux-auth-api = { path = "../flux-auth/lib/api" }

anyhow = "1.0.89"
config = { version = "0.14", default-features = false, features = ["toml"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ["serde", "v7"] }
futures-lite = "2.3.0"
futures = "0.3.30"
chrono = "0.4.38"
bytes = "1.7.2"

async-nats = "0.36.0"

axum = "0.7.7"

tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"

reqwest = { version = "0.12.7", default-features = false, features = ["json"] }

prost = "0.13.3"
tonic = "0.12.3"
tonic-health = "0.12.3"
tonic-reflection = "0.12.3"

cloudevents-sdk = { version = "0.7.0", features = ["nats"] }
