[package]
name = "flux-ai"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lib/api"]
resolver = "2"

[dependencies]
flux-ai-api = { path = "lib/api" }
flux-users-api = { git = "https://github.com/thefluxapp/flux-users.git" }
flux-messages-api = { git = "https://github.com/thefluxapp/flux-messages.git" }
flux-lib = { git = "https://github.com/thefluxapp/flux-lib.git" }

config = { version = "0.15", default-features = false, features = ["toml"] }
uuid = { version = "1.16.0", features = ["serde", "v7"] }
futures-lite = "2.6.0"
futures = "0.3.31"
chrono = "0.4.41"
bytes = "1.10.1"
tracing = { version = "0.1.41", features = ["log"] }
thiserror = "2.0.12"

async-nats = "0.40.0"

axum = "0.8.4"

tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"

reqwest = { version = "0.12.15", default-features = false, features = ["json"] }

prost = "0.13.5"
prost-types = "0.13.5"

tonic = "0.13.1"
tonic-health = "0.13.1"
tonic-reflection = "0.13.1"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
